[tool.poetry]
name = "norfab"
version = "0.2.0-alpha.0"
description = "Network Automations Fabric (NorFab) - module for communication networks automations"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/norfab"
repository = "https://github.com/dmulyalin/norfab"
documentation = "https://norfab.readthedocs.io/"
keywords = ["Network", "Automation", "DevOps"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
# Core Libs
python = ">=3.8,<3.12"
pyyaml = ">=6.0.1,<7.0.0"
pyzmq = ">=25.0.0,<27.0.0"

# PICLE Client Dependencies
picle = { version = ">=0.5.3,<1.0.0", optional = true }
rich = { version = ">=13.0.0,<14.0.0", optional = true }
tabulate = { version = ">=0.9.0,<1.0.0", optional = true }
pydantic = { version = ">=2.3.0,<3.0.0", optional = true }

# Nornir Service Dependencies
nornir = { version = ">=3.3.0,<4.0.0", optional = true }
nornir-salt = { version = ">=0.21.0", optional = true }
cerberus = { version = "1.3.5", optional = true }
jmespath = { version = "1.0.1", optional = true }
napalm = { version = "4.1.0", optional = true }
ncclient = { version = "0.6.15", optional = true }
netmiko = { version = "4.3.0", optional = true }
nornir-napalm = { version = "0.4.0", optional = true }
nornir-netmiko = { version = "1.0.1", optional = true }
nornir-scrapli = { version = "2023.7.30", optional = true }
ntc-templates = { version = "4.1.0", optional = true }
paramiko = { version = "3.4.0", optional = true }
pygnmi = { version = "0.8.13", optional = true }
puresnmp = { version = "2.0.0", optional = true, extras = ['crypto'] }
requests = { version = "2.31.0", optional = true }
scrapli = { version = "2023.7.30", optional = true }
scrapli-community = { version = "2023.7.30", optional = true }
scrapli-netconf = { version = "2023.7.30", optional = true }
ttp = { version = "0.9.*", optional = true }
ttp-templates = { version = "0.3.*", optional = true }
xmltodict = { version = "0.13.0", optional = true }
lxml = { version = ">=4.9.3,<5.1.0", optional = true }
textfsm = { version = "1.1.3", optional = true }
jinja2 = { version = "3.1.3", optional = true }
N2G = { version = "0.3.*", optional = true }
dnspython = { version = "2.4.2", optional = true }
pythonping = { version = "1.1.4", optional = true }

# Netbox Service Dependencies
diskcache = { version = "5.6.3", optional = true }
pynetbox = { version = "7.3.3", optional = true }

[tool.poetry.dev-dependencies]
black = "22.3.*"
pytest = { version = ">=7.1" }
fakenos = { version = ">=1.0.0" }
coverage = "*"
invoke = "*"

# docs dependencies for extras definition
mkdocs = { version = "*" }
mkdocs-material = { version = "*" }
mkdocs-material-extensions = { version = "*" }
mkdocstrings = { version = "*", extras = ["python"] } 
pygments = { version = "*" }
pymdown-extensions = { version = "*" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nfcli = 'norfab.utils:nfcli'

[tool.poetry.extras]
nfcli = [
	"picle",
    "rich",
    "tabulate",
	"pydantic",
]
nornirservice = [
    "nornir",
    "nornir-salt",
    "cerberus",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pygnmi",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml",
    "textfsm",
    "jinja2",
    "N2G",
    "dnspython",
    "pythonping",
	"tabulate",
	"pydantic",
]
netboxservice = [
	"requests",
	"pynetbox",
]